fixed overflow text in participate section

--- a/src/files/css/theme.css
+++ b/src/files/css/theme.css
@@ -630,9 +630,8 @@ a.supporter_header_link {
   margin-left:auto;
   margin-right:auto;
   width:98%;
-  height:98%;
   text-align:center;
-  height:300px;
+  height:350px;
   padding-top:10px;
 }
 .option p {
